# SensorCal

./: .gitignore  .gitmodules  CLAUDE-coding.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  shell.nix
.claude/: CLAUDE.md  settings.json
src/: CMakeLists.txt  entitlements-debug.plist  entitlements-release.plist  gui.cpp  gui.h  icon.icns  icon.psd  imuread.cpp  imuread.h  lineparser.cpp  lineparser.h  portlist.cpp  portscanner.cpp  portscanner.h  serialdata.cpp  serialdata.h  visualize.cpp  visualize.h  wizard.cpp  wizard.h
